# TI1805-Project

./: .gitignore  CMakeLists.txt  README.md  gen-eclipse.sh  presentation.txt  report.tex
src/: CMakeLists.txt  Pen_low.mtl  Pen_subsurf.mtl  Vec3D.h  code.pro  cube.mtl  image.cpp  image.h  imageloader.cpp  imageloader.h  kdnode.cpp  kdnode.h  main.cpp  mesh.cpp  mesh.h  ourtriangle.cpp  raytracing.cpp  raytracing.h  rgbvalue.h  shapes.cpp  shapes.h  textured.mtl  traqueboule.h
src/kdtree/: CMakeLists.txt  kdnode.cpp  kdnode.h  kdtree.cpp  kdtree.h
src/meshes/: altair.mtl  car.mtl  cube.mtl  pptmobile.mtl  textured.mtl  wall.mtl
src/meshes/textures/: earthmap1k.ppm  gravel.ppm  metal.ppm  sisal.ppm  wall.ppm  wood.ppm  wood_norm.ppm  wood_norm2.ppm  wood_norm3.ppm
src/shapes/: CMakeLists.txt  boundingbox.cpp  boundingbox.h  checkerboard.cpp  ourtriangle.cpp  plane.cpp  shapes.cpp  shapes.h  sphere.cpp
