file (GLOB SOURCES *.cpp)
add_executable (project ${SOURCES})
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	include_directories(/opt/X11/include)
	link_directories(/opt/X11/lib)
	add_definitions(-w)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
target_link_libraries (project ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
